syntax = 'proto3';

package paymentPackage;

service Payment {
  rpc PingPong(PingRequest) returns (PongResponse) {};
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}